--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query": "^4.32.6",
     "@tanstack/react-query-devtools": "^4.32.6",
     "axios": "^1.4.0",
+    "clsx": "^2.0.0",
     "object-to-formdata": "^4.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
